# URA-xLaw

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: validate.yml
data/: corpus_rag.parquet  manifest.json
dataset/: manifest.json  test.jsonl  unanswerable.jsonl
scripts/: parallel_scan.sh  run_pipeline.sh  scan_judgments_parallel.sh
src/ura_xlaw/: __init__.py  __main__.py  config.py
src/ura_xlaw/acquisition/: __init__.py  court_judgments.py  judgments.py  select_judgments.py
src/ura_xlaw/acquisition/laws/: __init__.py  missing.py  missing_laws.py  tvpl.py  tvpl_browser.py  tvpl_http.py  wikisource.py
src/ura_xlaw/corpus/: __init__.py  build.py  build_corpus.py  build_precedent_corpus.py  build_supplemental_corpus.py  citations.py  map_citations.py  precedents.py  supplemental.py
src/ura_xlaw/dataset/: __init__.py  build_unanswerable.py  export.py  export_answerable.py  flatten.py  flatten_qa.py  normalize_grounding.py  package_release.py  release.py  split.py  split_dataset.py  unanswerable.py  validate_release.py
src/ura_xlaw/generation/: __init__.py  generator.py  providers.py  service.py  validation.py  validator.py
src/ura_xlaw/preprocessing/: __init__.py  clean_judgments.py  judgments.py
src/ura_xlaw/prompts/: qa_generation.txt
tests/: test_core.py  test_pipeline_components.py  test_release.py
