[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ura-xlaw"
version = "1.0.1"
description = "Vietnamese legal RAG dataset and reproducible construction pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "pyarrow>=15",
  "python-dotenv>=1.0",
  "requests>=2.31",
  "tqdm>=4.66",
]

[project.optional-dependencies]
generation = ["google-generativeai>=0.8", "openai>=1.30"]
crawling = [
  "beautifulsoup4>=4.12",
  "lxml>=5.0",
  "playwright>=1.44",
  "PyMuPDF>=1.24",
]
corpus = ["datasets>=2.19"]
all = [
  "beautifulsoup4>=4.12",
  "datasets>=2.19",
  "google-generativeai>=0.8",
  "lxml>=5.0",
  "openai>=1.30",
  "playwright>=1.44",
  "PyMuPDF>=1.24",
]

[project.scripts]
ura-xlaw = "ura_xlaw.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
